--- a/conda/environments/split_fastqcats.yml
+++ b/conda/environments/split_fastqcats.yml
@@ -1,4 +1,4 @@
-name: scflow
+name: fastcats
 
 channels:
  - conda-forge
@@ -7,40 +7,7 @@ channels:
  - r
 
 dependencies:
- - python
- - cgat-apps
- - cgatcore
- - matplotlib
- - mygene
+ - python==3.11
+ - biopython
  - pytest
  - nose
- - numpy
- - pandas
- - kallisto
- - multiqc
- - fastqc
- - fastq-screen
- - pep8
- - ruffus
- - scipy
- - setuptools
- - statsmodels
- - r-base
- - r-optparse
- - r-seurat
- - r-tidyverse
- - r-ggthemes
- - scanpy
- - scipy
- - papermill
- - leidenalg
- - bioconductor-busparse 
- - bustools
- - bioconductor-tximport
- - bioconductor-dropletutils
- - bioconductor-celda
- - bioconductor-scdblfinder
- - bioconductor-singlecellexperiment
- - bioconductor-biomart
- - r-harmony
- - r-seuratdisk
