update cgat workflow
pipeline changed to use non-gzipped files, cluster params editted to optimise.

--- a/src/split_fastqcats/pipeline_split_by_index/pipeline.yml
+++ b/src/split_fastqcats/pipeline_split_by_index/pipeline.yml
@@ -5,8 +5,8 @@
 # Copyright statement
 copyright: cribbslab (2021)
 
-FP: "AAGCAGTGGTATCAACGCAGAGTGAAT"
-RP: "GTACTCTGCGTTGATACCACTGCTT"
+FP: AAGCAGTGGTATCAACGCAGAGTGAAT
+RP: GTACTCTGCGTTGATACCACTGCTT
 
 indexes:
   - AAATTTGGGCCC
@@ -22,7 +22,9 @@ indexes:
   - GGGCCCGGGCCC
   - CCCTTTCCCTTT
 
-split: 400000
+#change error depending on number of barcodes - 3 or 4 is best for this set
+error: 4
+split: 4000000
 
 job_options: -t 18:00:00
 
