--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,28 +11,46 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+    # Only test on Linux; parasail is not available on macOS ARM
+    strategy:
+      matrix:
+        python-version: ["3.10", "3.11"]
+    # Remove macOS from runners; parasail is Linux-only
 
     steps:
-    - name: Check out repository
-      uses: actions/checkout@v3
+    - uses: actions/checkout@v4
 
-    - name: Set up Python
-      uses: actions/setup-python@v4
+    - name: Set up Conda
+      uses: conda-incubator/setup-miniconda@v3
       with:
-        python-version: '3.x'
+        auto-update-conda: true
+        python-version: ${{ matrix.python-version }}
+        channels: conda-forge,bioconda
+        channel-priority: strict
+        auto-activate-base: false
 
-    - name: Install dependencies
+    - name: Install Mamba
+      shell: bash -l {0}
       run: |
-        python -m pip install --upgrade pip
-        pip install -e .
-        pip install pytest
+        conda install -n base -c conda-forge mamba
 
-    - name: Run tests
+    - name: Create environment and install dependencies
+      shell: bash -l {0}
       run: |
-        pytest tests/
+        mamba env create -f environment.yml
+        conda activate split_fastqcats
+        python -m pip install -e .
+
+    - name: Run unit tests
+      shell: bash -l {0}
+      run: |
+        conda activate split_fastqcats
+        pytest tests/ --maxfail=5 --disable-warnings -v
 
     - name: Run integration test
+      shell: bash -l {0}
       run: |
+        conda activate split_fastqcats
         mkdir -p output
         split-fastqcats tests/test.fastq.gz \
           --processed-output output/processed.fastq \
