--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,11 +34,13 @@ jobs:
     - name: Run integration test
       run: |
         mkdir -p output
-        split-fastqcats tests/test.fastq.gz \
-          --processed-output output/processed.fastq \
-          --lowqual-output output/lowqual.fastq \
-          --bin-output output/binned.fastq \
-          --stats-output output/stats.txt
+        split-fastqcats primer_pair_split \
+          -i tests/test.fastq.gz \
+          -res output \
+          --processed-output processed.fastq.gz \
+          --lowqual-output lowqual.fastq.gz \
+          --bin-output binned.fastq.gz \
+          --stats-output stats.csv
 
     - name: Check output files
       run: |
