--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -62,7 +62,7 @@ jobs:
 
     - name: Check output files
       run: |
-        for file in output/*.fastq; do
+        for file in output/*.fastq.gz; do
           if [ -s "$file" ]; then
             echo "$file exists and is not empty"
           else
@@ -70,7 +70,7 @@ jobs:
             exit 1
           fi
         done
-        if [ -s "output/stats.txt" ]; then
+        if [ -s "output/stats.csv" ]; then
           echo "Stats file exists and is not empty"
         else
           echo "Stats file is empty or missing"
